--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-node_modules
+node_modules/
+dist/
+coverage/
+.nyc_output/
+.env
+.env.local
+*.log
+.DS_Store
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
